<?xml version="1.0" encoding="utf-8"?>
<!-- "Create one item" for RecyclerView   -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:id="@+id/tvNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="3dp"
                    android:gravity="start|center_vertical"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="1">
                <TextView
                    android:id="@+id/tvCategoryTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:paddingHorizontal="1dp"
                    android:text="@string/category"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvPeriodTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:paddingHorizontal="1dp"
                    android:text="@string/period"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAmountTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:paddingHorizontal="1dp"
                    android:text="@string/amount"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">


                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.33"
                    android:gravity="top|center_horizontal"
                    android:paddingHorizontal="1dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvPeriod"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.33"
                    android:gravity="top|center_horizontal"
                    android:paddingHorizontal="1dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.33"
                    android:gravity="top|center_horizontal"
                    android:paddingHorizontal="1dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/tapToDelete"
                android:textSize="13sp"
                android:textStyle="italic" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

</LinearLayout>